Tue Dec 19 15:08:40 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/INET_Addr.{h,i}: Make operator < const.  Thanks to
	  Michael Lindner <mikel@att.net> for reporting this.

Tue Dec 19 18:39:27 2000  Luther J Baker  <luther@cs.wustl.edu>

	* ace/WFMO_Reactor.cpp (simple_dispatch_handler):

	  When ACE_HAS_PACE on NT, ACE must use pace_siginfo_t instead
	  of creating and using its own. The ACE version of siginfo_t
	  happens to use constructors and so, the code that uses
	  this ACE siginfor_t instantiates the struct via a constructor.
	  When ACE_HAS_PACE, the pace_siginfo_t cannot be instantiated
	  via constructor.

	  My edit just chooses the correct method of instantiation
	  based on ACE_HAS_PACE.

Tue Dec 19 18:21:52 2000  Luther J Baker  <luther@cs.wustl.edu>

	* ace/Thread.h (ACE_Thread):

	  Removed the default value on the overriden join (...)
	  function that took three parameters.

Tue Dec 19 14:50:38 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: If on ACE_WIN32, set ACE_DEFAULT_FILE_PERMS to
          (FILE_SHARE_READ | FILE_SHARE_WRITE), not 0666.

Tue Dec 19 14:40:26 2000  Steve Huston  <shuston@riverace.com>

        * ace/Filecache.cpp: Changed definition of R_MASK and W_MASK to
          0 for ACE_WIN32; used to be for __BORLANDC__. This is related
          to the change below because the third arg to ACE_OS::open is
          not ignored any longer for Win32.

        * tests/Capabilities_Test.cpp: On ACE_OS::open, don't supply a
          <perms> arg - let it default. The file gets deleted at the end of
          the test and has nothing to be protected. Related to the below
          change as well.

        * tests/Mem_Map_Test.cpp: Changed all the 0666 args to ACE_OS::open
          to ACE_DEFAULT_FILE_PERMS.

Tue Dec 19 11:02:41 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.{h cpp} (open(char), open(wchar)): Changed the <perms>